Fixup overflow scroll

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -168,8 +168,7 @@ pre {
   font-size: .9rem;
   line-height: 1.4;
   white-space: nowrap;
-  white-space: nowrap;
-  overflow-x: auto;
+  overflow: scroll;
   word-break: break-all;
   word-wrap: break-word;
   background-color: #f9f9f9;
